# ai-portfolio-projects

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
ChatKit_Powered_Assistant/: .env.example  .gitignore  README.md  main.py  pyproject.toml
ChatKit_Powered_Assistant/app/: agent.py  server.py  store.py  tools.py  types.py  widgets.py
ChatKit_Powered_Assistant/docs/assets/: browser_snapshot.yml
ChatKit_Powered_Assistant/scripts/: __debug_chat.py  __debug_responses.py  debug_events.py
ChatKit_Powered_Assistant/static/: frontend_snapshot.yml  index.html
docs/assets/: ai-chatkit-README.md  ai-chatkit-backend-app-ai-contents.json  ai-chatkit-backend-app-api-chat_routes.py  ai-chatkit-backend-app-api-contents.json  ai-chatkit-backend-app-contents.json  ai-chatkit-backend-app-main.py  ai-chatkit-backend-app-run_server.py  ai-chatkit-backend-contents.json  ai-chatkit-meta.json
local-LLM-with-RAG/: .gitignore  CLAUDE.md  pyproject.toml  readme.md
local-LLM-with-RAG/.github/workflows/: opencode-review.yml
local-LLM-with-RAG/bench/: __init__.py  __main__.py  cli.py  judge.py  questions.jsonl  runner.py
local-LLM-with-RAG/core/: agent.py
local-LLM-with-RAG/courserag/: README.md
local-LLM-with-RAG/courserag-backup/: README.md
local-LLM-with-RAG/interfaces/: streamlit_app.py
site/: site.yml
site/css/: main.css
